# mcp-github-actions

./: .env.example  .gitignore  MCP_SETUP.md  README.md  claude_desktop_config_template.json  example_usage.py  pyproject.toml  test_mcp_server.py
src/mcp_github_actions/: __init__.py  __main__.py  config.py  github_client.py  server.py
